# evm-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  README.md  diesel.toml  docker-compose.db.yml  docker-compose.nodes.yml  docker-compose.yml
.github/workflows/: build-push-image.yaml  docker.yml
doc/: DATABASE.md  RELATIONS.md
docker/: docker-compose.yml
migrations/: 20230227201309_create_tables.sql
migrations/00000000000001_create_tables/: up.sql
migrations/00000000000002_create_nft_tables/: up.sql
migrations/2022-11-21-170559_create_block/: up.sql
migrations/2022-11-21-171016_create_txs/: up.sql
migrations/2022-11-21-223325_create_state/: down.sql  up.sql
migrations/2022-11-22-170341_create_txs_receipts/: down.sql  up.sql
migrations/2022-11-22-170643_create_logs/: up.sql
migrations/2022-11-25-011632_create_contract_interactions/: down.sql  up.sql
migrations/2022-11-25-011646_create_contract_creation/: down.sql  up.sql
migrations/2022-11-25-011706_create_token_transfers/: down.sql  up.sql
migrations/2022-11-27-052143_create_state/: up.sql
migrations/2022-11-27-165448_create_tokens/: up.sql
migrations/2022-11-28-151330_create_excluded_tokens/: down.sql  up.sql
migrations/2022-11-29-214656_txs_no_receipt/: down.sql  up.sql
migrations/2022-12-01-182340_create_indexes/: down.sql  up.sql
migrations/2022-12-01-202702_create_contract_interaction_index/: down.sql  up.sql
migrations/2022-12-01-224423_create_tables/: down.sql  up.sql
migrations/2022-12-01-224700_create_indexes/: down.sql  up.sql
migrations/2022-12-15-200544_create_contracts_adapter/: down.sql  up.sql
migrations/2022-12-15-224215_create_history_indexes/: down.sql  up.sql
migrations/2022-12-15-230243_create_tx_timestamp_index/: down.sql  up.sql
migrations/2022-12-28-182816_create_block_index/: down.sql  up.sql
migrations/2023-01-03-152672_create_nft_tables/: down.sql  up.sql
migrations/2023-01-03-153891_create_nft_indexes/: down.sql  up.sql
migrations/2023-01-14-173617_create_evm_tables/: down.sql  up.sql
migrations/2023-01-14-212947_create_chain_states/: down.sql  up.sql
migrations/2023-01-15-200833_create_erc20_transfers/: down.sql  up.sql
migrations/2023-01-15-200842_create_contract_interactions/: down.sql  up.sql
migrations/2023-01-18-220329_create_logs_erc20_parse_column/: down.sql  up.sql
migrations/2023-01-18-221405_fix_erc20_transfers_table/: up.sql
migrations/2023-01-18-221918_drop_erc20_transfers_old_column/: up.sql
src/: chains.rs  config.rs  db.rs  fetcher.rs  lib.rs  main.rs  rpc.rs  utils.rs
src/chains/: chains.rs  evm_chains.rs  mod.rs
(+40 files in other folders)
