[package]
name = "evm-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = { version = "2", features = ["postgres"] }
dotenv = "0.15"
ethabi = "18"
log = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
web3 = { git = "https://github.com/patrick-fitzgerald/rust-web3", branch = "erigon_eth_getBlockReceipts" }

[dependencies.simple_logger]
version = "4.0.0"
default-features = false
features = ["colors"]

[features]
stdout = []